some little changes

--- a/SurveyForm/index.html
+++ b/SurveyForm/index.html
@@ -23,18 +23,18 @@
             
             <br>
 
-            <label for="age" id="age-label">How old are you?<i class="red-asterisk">*</i></label>
-            <input type="number" name="age" id="age" placeholder="'23'" min="18" max="99">
+            <label for="number" id="number-label">How old are you?<i class="red-asterisk">*</i></label>
+            <input type="number" name="age" id="number" placeholder="'23'" min="18" max="99" required>
             
             <br>
 
-            <label for="number" id="number-label">What's your phone number? <i class="optional">(optional)</i> </label>
-            <input type="tel" name="number" id="number">
+            <label for="tel" id="tel-label">What's your phone number? <i class="optional">(optional)</i> </label>
+            <input type="tel" name="tel" id="tel" placeholder="21 99070-0465" required>
 
             <br>
 
             <label for="dropdown" id="country-label">What country do you live in?<i class="red-asterisk">*</i></label>
-            <select name="dropdown" id="dropdown">
+            <select name="dropdown" id="dropdown" required>
                 <option disabled selected value="">select country</option>
                 <option value="australia">Australia</option>
                 <option value="brazil">Brazil</option>
